// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSProgressIndicator Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": undefined,
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress"
      id="example-progress-indicator"
    >
      <ol
        className="slds-progress__list"
      >
        <li
          className="slds-progress__item slds-is-active"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current="step"
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                This is custom text in the assistive text key
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 2: tooltip label #2
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <a
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                className="slds-assistive-text"
              >
                Step 3: [object Object] - Disabled
              </span>
            </a>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <a
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                className="slds-assistive-text"
              >
                Step 4: tooltip label #4 - Disabled
              </span>
            </a>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <a
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                className="slds-assistive-text"
              >
                Step 5: tooltip label #5 - Disabled
              </span>
            </a>
            <span />
          </div>
        </li>
      </ol>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        className="slds-progress-bar slds-progress-bar_x-small"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 0%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressIndicator Base With Disabled Steps 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress"
      id="example-progress-indicator"
    >
      <ol
        className="slds-progress__list"
      >
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                This is custom text in the assistive text key
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 2: tooltip label #2 - Completed
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-active"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current="step"
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 3: [object Object]
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <a
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                className="slds-assistive-text"
              >
                Step 4: tooltip label #4 - Disabled
              </span>
            </a>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <a
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                className="slds-assistive-text"
              >
                Step 5: tooltip label #5 - Disabled
              </span>
            </a>
            <span />
          </div>
        </li>
      </ol>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        className="slds-progress-bar slds-progress-bar_x-small"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 50%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressIndicator Base With Many Steps 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress"
      id="example-progress-indicator"
    >
      <ol
        className="slds-progress__list"
      >
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 1: tooltip label #1 - Completed
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 2: tooltip label #2 - Completed
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 3: tooltip label #3 - Completed
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 4: tooltip label #4 - Completed
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-active"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current="step"
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 5: tooltip label #5
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 6: tooltip label #6
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 7: tooltip label #7
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 8: tooltip label #8
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 9: tooltip label #9
              </span>
            </button>
            <span />
          </div>
        </li>
      </ol>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        className="slds-progress-bar slds-progress-bar_x-small"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 50%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressIndicator Completed Progress 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress"
      id="example-progress-indicator"
    >
      <ol
        className="slds-progress__list"
      >
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                This is custom text in the assistive text key
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 2: tooltip label #2 - Finished this step.
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 3: [object Object] - Finished this step.
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-active"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current="step"
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 4: tooltip label #4
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 5: tooltip label #5
              </span>
            </button>
            <span />
          </div>
        </li>
      </ol>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        className="slds-progress-bar slds-progress-bar_x-small"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "75%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 75%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressIndicator In A Modal (With Step Error) - Needs DOM 1`] = `
<div
  className="slds-p-around_medium"
/>
`;

exports[`DOM snapshots SLDSProgressIndicator SetupAssistant 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": undefined,
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress slds-progress_vertical slds-progress_success"
      id="setup-assistant-progress-indicator"
    >
      <ol
        className="slds-progress__list slds-progress__list-bordered"
      >
        <li
          className="slds-progress__item slds-is-active"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-0"
          >
            <div
              className="slds-size_3-of-4"
            >
              tooltip label #1
            </div>
            <div
              className="slds-grid slds-grid_align-end slds-size_1-of-4"
            >
              <div
                className="slds-media__figure slds-media__figure_reverse"
              >
                <button
                  className="slds-button slds-button_brand"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Brand
                </button>
                <p
                  className="slds-text-align_right slds-text-color_weak slds-p-top_medium"
                >
                  4 min
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-1"
          >
            <div
              className="slds-size_3-of-4"
            >
              tooltip label #2
            </div>
            <div
              className="slds-grid slds-grid_align-end slds-size_1-of-4"
            >
              <div
                className="slds-media__figure slds-media__figure_reverse"
              >
                <button
                  className="slds-button slds-button_brand"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Disabled
                </button>
                <p
                  className="slds-text-align_right slds-text-color_weak slds-p-top_medium"
                >
                  40 min
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-2"
          >
            <div
              className="slds-size_3-of-4"
            >
              tooltip label #3
            </div>
            <div
              className="slds-grid slds-grid_align-end slds-size_1-of-4"
            >
              <div
                className="slds-media__figure slds-media__figure_reverse"
              >
                <button
                  className="slds-button slds-button_neutral"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="slds-button__icon slds-button__icon_left"
                  >
                    <use
                      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#download"
                    />
                  </svg>
                  Download
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-3"
          >
            <div
              className="slds-size_3-of-4"
            >
              tooltip label #4
            </div>
            <div
              className="slds-grid slds-grid_align-end slds-size_1-of-4"
            >
              <div
                className="slds-media__figure slds-media__figure_reverse"
              >
                <div
                  className="slds-form-element"
                >
                  <label
                    className="slds-checkbox_toggle slds-grid"
                    htmlFor="checkbox-toggle-example--error"
                  >
                    <input
                      aria-describedby="checkbox-toggle-example--error-desc"
                      id="checkbox-toggle-example--error"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <span
                      aria-live="assertive"
                      className="slds-checkbox_faux_container"
                      id="checkbox-toggle-example--error-desc"
                    >
                      <span
                        className="slds-checkbox_faux"
                      />
                      <span
                        className="slds-checkbox_on"
                      >
                        Enabled
                      </span>
                      <span
                        className="slds-checkbox_off"
                      >
                        Disabled
                      </span>
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-4"
          >
            <div
              className="slds-size_3-of-4"
            >
              tooltip label #5
            </div>
            <div
              className="slds-grid slds-grid_align-end slds-size_1-of-4"
            >
              <div
                className="slds-media__figure slds-media__figure_reverse"
              >
                <button
                  className="slds-button slds-button_neutral"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Done
                </button>
                <p
                  className="slds-text-align_right slds-text-color_weak slds-p-top_medium"
                >
                  14 min
                </p>
              </div>
            </div>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressIndicator Step Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress"
      id="example-progress-indicator"
    >
      <ol
        className="slds-progress__list"
      >
        <li
          className="slds-progress__item slds-is-completed"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                This is custom text in the assistive text key
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item slds-has-error"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "",
              }
            }
          >
            <button
              aria-current="step"
              className="slds-button slds-button_icon slds-progress__marker slds-progress__marker_icon"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#error"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Step 2: tooltip label #2 - Error
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 3: [object Object]
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 4: tooltip label #4
              </span>
            </button>
            <span />
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <div
            className="slds-tooltip-trigger"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <button
              aria-current={null}
              className="slds-button slds-progress__marker"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <span
                className="slds-assistive-text"
              >
                Step 5: tooltip label #5
              </span>
            </button>
            <span />
          </div>
        </li>
      </ol>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        className="slds-progress-bar slds-progress-bar_x-small"
        role="progressbar"
      >
        <span
          className="slds-progress-bar__value"
          style={
            Object {
              "width": "25%",
            }
          }
        >
          <span
            className="slds-assistive-text"
          >
            Progress: 25%
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressIndicator Vertical 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "background": undefined,
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress slds-progress_vertical"
      id="vertical-progress-indicator"
    >
      <ol
        className="slds-progress__list"
      >
        <li
          className="slds-progress__item slds-is-active"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-0"
          >
            tooltip label #1
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-1"
          >
            tooltip label #2
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-2"
          >
            tooltip label #3
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-3"
          >
            tooltip label #4
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-4"
          >
            tooltip label #5
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSProgressIndicator VerticalStepError 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "padding": "4rem 1rem 0px",
      }
    }
  >
    <div
      className="slds-progress slds-progress_vertical"
      id="example-progress-indicator"
    >
      <ol
        className="slds-progress__list"
      >
        <li
          className="slds-progress__item slds-is-completed"
        >
          <span
            className="slds-progress__marker slds-progress__marker_icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_x-small slds-icon-text-default"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              
            </span>
          </span>
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-a"
          >
            tooltip label #1
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <span
            className="slds-progress__marker slds-progress__marker_icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_x-small slds-icon-text-default"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              
            </span>
          </span>
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-b"
          >
            tooltip label #2
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <span
            className="slds-progress__marker slds-progress__marker_icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_x-small slds-icon-text-default"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              
            </span>
          </span>
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-c"
          >
            tooltip label #3
          </div>
        </li>
        <li
          className="slds-progress__item slds-is-completed"
        >
          <span
            className="slds-progress__marker slds-progress__marker_icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_x-small slds-icon-text-default"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#success"
                />
              </svg>
              
            </span>
          </span>
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-d"
          >
            tooltip label #4
          </div>
        </li>
        <li
          className="slds-progress__item slds-has-error"
        >
          <span
            className="slds-progress__marker slds-progress__marker_icon"
          >
            <span>
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_x-small slds-icon-text-default"
              >
                <use
                  xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#error"
                />
              </svg>
              
            </span>
          </span>
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-e"
          >
            tooltip label #5
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-f"
          >
            tooltip label #6
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-g"
          >
            tooltip label #7
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-h"
          >
            tooltip label #8
          </div>
        </li>
        <li
          className="slds-progress__item"
        >
          <span
            className="slds-progress__marker"
          />
          <div
            className="slds-progress__item_content slds-grid slds-grid_align-spread"
            id="progress-indicator-vertical-label-i"
          >
            tooltip label #9
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;
